@@ -1,0 +1,26 @@
+#ifndef Analysis_h
+#define Analysis_h
+
+//-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-//
+// The main to calculate the electric field using varius //
+// methods. Right now only 1-D is implemented, but that  //
+// will change shortly.                                  //
+//-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-//
+
+// Right now it is a skeleton.  Not sure what I want to do yet!
+
+#include "Dim1.h"
+
+class Analysis
+{
+
+ public:
+
+  // Constructor/Destructor
+  Analysis();
+  virtual ~Analysis();
+  
+
+};
+
+#endif
