@@ -2,3 +2,4 @@
 2014-03-18 Matt:
 	* Creating package in order to derive electric field from shower profiles.
 	* Setting up structure
+	* Skeleton of code added
